--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ asgiref==3.8.1
 sqlparse==0.5.3
 typing-extensions==4.14.0
 gunicorn==21.2.0
-whitenoise==6.6.0 
+whitenoise==6.6.0
+requests==2.31.0 
